# temperature-impact-analysis

./: .gitignore  README.md  main.py  metrics.ipynb  metrics.py  pyproject.toml  text_analysis.py
results/: results_anthropic.json  results_anthropic_60_samples.json  results_gpt-4.1_temp_0.6-1.6_step_0.05_tokens_200.json  results_gpt-4.1_temp_1-1.4_step_0.02_tokens_200.json  results_gpt-4.1_temp_1-1.5_step_0.025_tokens_200.json  results_mistral.json  results_openai.json
